--- a/releases.json
+++ b/releases.json
@@ -6,5 +6,15 @@
         "notes": [
             "[Added] Initial release"
         ]
+    },
+    {
+        "version": "0.0.2",
+        "downloadUrl": "https://github.com/fyrebase/svgicons/archive/master.zip",
+        "date": "2016-10-05T11:00:00-11:00",
+        "notes": [
+            "[Added] Obtain icon model from string using new template variable getModel",
+						"[Added] Renamed getIconFromString service method to getModel and fixed pathing issue"
+            "[Improved] Updated README.md"
+        ]
     }
 ]
