--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,14 @@
 [
     {
+        "version": "0.0.3",
+        "downloadUrl": "https://github.com/fyrebase/svg-icons/archive/master.zip",
+        "date": "2016-10-12T11:00:00-11:00",
+        "notes": [
+            "[Added] Initial support for SVG sprite sheets",
+            "[Improved] Updated README.md"
+        ]
+    },
+    {
         "version": "0.0.2",
         "downloadUrl": "https://github.com/fyrebase/svg-icons/archive/master.zip",
         "date": "2016-10-05T11:00:00-11:00",
