--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,14 @@
 [
     {
+        "version": "0.0.4",
+        "downloadUrl": "https://github.com/fyrebase/svg-icons/archive/master.zip",
+        "date": "2016-10-12T11:10:00-11:00",
+        "notes": [
+            "[Fixed] JavaScript namespacing issue"
+            "[Fixed] PHP error when failing to add icon sets durring fieldsetup"
+        ]
+    },
+    {
         "version": "0.0.3",
         "downloadUrl": "https://github.com/fyrebase/svg-icons/archive/master.zip",
         "date": "2016-10-12T11:00:00-11:00",
