--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,13 @@
 [
     {
+        "version": "0.0.5",
+        "downloadUrl": "https://github.com/fyrebase/svg-icons/archive/master.zip",
+        "date": "2016-11-16T11:10:00-11:00",
+        "notes": [
+            "[Fixed] Fixed bug when using single svg icons would not display icon in CP"
+        ]
+    },
+    {
         "version": "0.0.4",
         "downloadUrl": "https://github.com/fyrebase/svg-icons/archive/master.zip",
         "date": "2016-10-12T11:10:00-11:00",
